k8-helm/templates/logstash.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: logstash
  namespace: dev-namespace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dev-app
  template:
    metadata:
      labels:
        app: dev-app
    spec:
      containers:
        - name: logstash
          image: docker.elastic.co/logstash/logstash:7.15.0
          ports:
            - containerPort: 5044
              name: beats
            - containerPort: 9600
              name: monitoring

---

apiVersion: v1
kind: Service
metadata:
  name: logstash
  namespace: dev-namespace
spec:
  selector:
    app: logstash
  ports:
    - protocol: TCP
      port: 5044
      targetPort: 5044
      name: beats
    - protocol: TCP
      port: 9600
      targetPort: 9600
      name: monitoring
