k8-helm/templates/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: dev-allow-policy
  namespace: dev-namespace
spec:
  podSelector:
    matchLabels:
      app: dev-pod
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: dev-pod
    ports:
    - port: 8291
      protocol: TCP
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: dev-pod
